--- a/src/index.html
+++ b/src/index.html
@@ -102,26 +102,26 @@
             <ul>
                 <li class="dropdown"><a href="">大会员</a></li>
                 <li class="dropdown">
-                    <a href="">消息</a>
+                    <a href="https://message.bilibili.com/">消息</a>
                     <div class="dropdown-content">
-                        <a href="#">回复我的</a>
-                        <a href="#">@我的</a>
-                        <a href="#">收到的赞</a>
-                        <a href="#">系统消息</a>
-                        <a href="#">我的消息</a>
+                        <a href="https://message.bilibili.com/#/reply">回复我的</a>
+                        <a href="https://message.bilibili.com/#/at">@我的</a>
+                        <a href="https://message.bilibili.com/#/love">收到的赞</a>
+                        <a href="https://message.bilibili.com/#/system">系统消息</a>
+                        <a href="https://message.bilibili.com/#/whisper/">我的消息</a>
                 </li>
-                <li class="dropdown"><a href="">动态</a></li>
+                <li class="dropdown"><a href="https://t.bilibili.com/">动态</a></li>
                 <li class="dropdown"><a href="">收藏</a></li>
-                <li class="dropdown"><a href="">历史</a></li>
-                <li class="dropdown"><a href="">创作中心</a></li>
+                <li class="dropdown"><a href="https://www.bilibili.com/history">历史</a></li>
+                <li class="dropdown"><a href="https://member.bilibili.com/platform/home">创作中心</a></li>
                 <li class="dropdown">
-                    <a href="">投稿</a>
+                    <a href="https://member.bilibili.com/platform/upload/video/frame">投稿</a>
                     <div class="dropdown-content">
-                        <a href="#">专栏投稿</a>
-                        <a href="#">音频投稿</a>
-                        <a href="#">贴纸投稿</a>
-                        <a href="#">视频投稿</a>
-                        <a href="#">投稿管理</a>
+                        <a href="https://member.bilibili.com/platform/upload/text/apply">专栏投稿</a>
+                        <a href="https://member.bilibili.com/platform/upload/audio/frame">音频投稿</a>
+                        <a href="https://member.bilibili.com/platform/upload/sticker">贴纸投稿</a>
+                        <a href="https://member.bilibili.com/platform/upload/video/frame">视频投稿</a>
+                        <a href="https://member.bilibili.com/platform/upload-manager/article">投稿管理</a>
                 </li>
             </ul>
         </nav>
@@ -212,5 +212,5 @@
     自动获取b站用户头像文件(或者说能否自动获取对应图像url?)
     多页面切换功能
     自动获取视频封面url等信息填入json
-问题：暂无
+问题："首页" 二级悬浮菜单大小仍需调整
 -->
