--- a/src/index.html
+++ b/src/index.html
@@ -102,26 +102,26 @@
             <ul>
                 <li class="dropdown"><a href="">大会员</a></li>
                 <li class="dropdown">
-                    <a href="https://message.bilibili.com/">消息</a>
+                    <a href="https://message.bilibili.com/" target="_blank">消息</a>
                     <div class="dropdown-content">
-                        <a href="https://message.bilibili.com/#/reply">回复我的</a>
-                        <a href="https://message.bilibili.com/#/at">@我的</a>
-                        <a href="https://message.bilibili.com/#/love">收到的赞</a>
-                        <a href="https://message.bilibili.com/#/system">系统消息</a>
-                        <a href="https://message.bilibili.com/#/whisper/">我的消息</a>
+                        <a href="https://message.bilibili.com/#/reply" target="_blank">回复我的</a>
+                        <a href="https://message.bilibili.com/#/at" target="_blank">@我的</a>
+                        <a href="https://message.bilibili.com/#/love" target="_blank">收到的赞</a>
+                        <a href="https://message.bilibili.com/#/system" target="_blank">系统消息</a>
+                        <a href="https://message.bilibili.com/#/whisper/" target="_blank">我的消息</a>
                 </li>
-                <li class="dropdown"><a href="https://t.bilibili.com/">动态</a></li>
+                <li class="dropdown"><a href="https://t.bilibili.com/" target="_blank">动态</a></li>
                 <li class="dropdown"><a href="">收藏</a></li>
-                <li class="dropdown"><a href="https://www.bilibili.com/history">历史</a></li>
-                <li class="dropdown"><a href="https://member.bilibili.com/platform/home">创作中心</a></li>
+                <li class="dropdown"><a href="https://www.bilibili.com/history" target="_blank">历史</a></li>
+                <li class="dropdown"><a href="https://member.bilibili.com/platform/home" target="_blank">创作中心</a></li>
                 <li class="dropdown">
-                    <a href="https://member.bilibili.com/platform/upload/video/frame">投稿</a>
+                    <a href="https://member.bilibili.com/platform/upload/video/frame" target="_blank">投稿</a>
                     <div class="dropdown-content">
-                        <a href="https://member.bilibili.com/platform/upload/text/apply">专栏投稿</a>
-                        <a href="https://member.bilibili.com/platform/upload/audio/frame">音频投稿</a>
-                        <a href="https://member.bilibili.com/platform/upload/sticker">贴纸投稿</a>
-                        <a href="https://member.bilibili.com/platform/upload/video/frame">视频投稿</a>
-                        <a href="https://member.bilibili.com/platform/upload-manager/article">投稿管理</a>
+                        <a href="https://member.bilibili.com/platform/upload/text/apply" target="_blank">专栏投稿</a>
+                        <a href="https://member.bilibili.com/platform/upload/audio/frame" target="_blank">音频投稿</a>
+                        <a href="https://member.bilibili.com/platform/upload/sticker" target="_blank">贴纸投稿</a>
+                        <a href="https://member.bilibili.com/platform/upload/video/frame" target="_blank">视频投稿</a>
+                        <a href="https://member.bilibili.com/platform/upload-manager/article" target="_blank">投稿管理</a>
                 </li>
             </ul>
         </nav>
