--- a/src/index.html
+++ b/src/index.html
@@ -193,7 +193,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 "Bili Hub" 版权所有</p>
+            <p>&copy; 2025 Bili Hub "版权所有(?)"</p>
         </div>
     </footer>
     <script src="./script.js"></script>
