--- a/src/index.html
+++ b/src/index.html
@@ -148,52 +148,52 @@
     <footer>
         <div class="footer-content">
             <div class="footer-column">
-                <h4>Information</h4>
+                <h4>信息</h4>
                 <ul>
-                    <li><a href="#">Sitemap</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Privacy Notice</a></li>
+                    <li><a href="#">网站地图</a></li>
+                    <li><a href="#">条款和条件</a></li>
+                    <li><a href="#">隐私声明</a></li>
                     <li><a href="#">DMCA</a></li>
                     <li><a href="#">2257</a></li>
-                    <li><a href="#">EU DSA</a></li>
-                    <li><a href="#">Recommender System Guidelines</a></li>
-                    <li><a href="#">Cookie Notice</a></li>
+                    <li><a href="#">欧盟数字服务法</a></li>
+                    <li><a href="#">推荐系统指南</a></li>
+                    <li><a href="#">Cookie政策</a></li>
                 </ul>
             </div>
             <div class="footer-column">
-                <h4>Work With Us</h4>
+                <h4>加入我们</h4>
                 <ul>
-                    <li><a href="#">Content Partners</a></li>
-                    <li><a href="#">Advertise</a></li>
-                    <li><a href="#">Webmasters</a></li>
-                    <li><a href="#">Model Program</a></li>
-                    <li><a href="#">Press</a></li>
+                    <li><a href="#">内容合作伙伴</a></li>
+                    <li><a href="#">广告服务</a></li>
+                    <li><a href="#">网站管理员</a></li>
+                    <li><a href="#">UP主计划</a></li>
+                    <li><a href="#">媒体中心</a></li>
                 </ul>
             </div>
             <div class="footer-column">
-                <h4>Support and Help</h4>
+                <h4>支持与帮助</h4>
                 <ul>
-                    <li><a href="#">Content Removal</a></li>
-                    <li><a href="#">Contact Support</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Trust and Safety</a></li>
-                    <li><a href="#">Parental Controls</a></li>
+                    <li><a href="#">内容移除</a></li>
+                    <li><a href="#">联系客服</a></li>
+                    <li><a href="#">常见问题</a></li>
+                    <li><a href="#">信任与安全</a></li>
+                    <li><a href="#">家长控制</a></li>
                 </ul>
             </div>
             <div class="footer-column">
-                <h4>Discover</h4>
+                <h4>发现</h4>
                 <ul class="social-links">
-                    <li><a href="#">Pornhub Blog</a></li>
-                    <li><a href="#">Insights Blog</a></li>
-                    <li><a href="#">Sexual Wellness Center</a></li>
-                    <li><a href="#">Mobile</a></li>
-                    <li><a href="#">Visually Impaired</a></li>
-                    <li><a href="#">Audio Impaired</a></li>
+                    <li><a href="#">Bili-Hub博客</a></li>
+                    <li><a href="#">数据洞察</a></li>
+                    <li><a href="#">个人中心</a></li>
+                    <li><a href="#">移动端</a></li>
+                    <li><a href="#">视障辅助</a></li>
+                    <li><a href="#">听障辅助</a></li>
                 </ul>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Bili Hub "版权所有(?)"</p>
+            <p>&copy; 2025 Bili-Hub "版权所有"</p>
         </div>
     </footer>
     <script src="./script.js"></script>
