--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
         </nav>
         <div class="avatar-info">
             <a href="https://space.bilibili.com/" target="_blank" class="avatar-dropdown-content">
-                <img class="avatar" src="/static/images/avatar.png" alt="用户头像">
+                <img class="avatar" src="/res/images/avatar.png" alt="用户头像">
             </a>
         </div>
 
@@ -142,6 +142,10 @@
                 <br>
                 "Bilibili Hub"
             </p>
+            <div class="disclaimer">
+                <p><strong>免责声明：</strong>本项目仅作为前端技术学习与展示，与Pornhub和哔哩哔哩(Bilibili)官方没有任何关联。
+                项目中使用的任何设计元素仅用于教育目的，不代表对相关品牌的任何认可或附属关系。</p>
+            </div>
         </div>
     </main>
 
@@ -155,7 +159,6 @@
                     <li><a href="#">隐私声明</a></li>
                     <li><a href="#">DMCA</a></li>
                     <li><a href="#">2257</a></li>
-                    <li><a href="#">欧盟数字服务法</a></li>
                     <li><a href="#">推荐系统指南</a></li>
                     <li><a href="#">Cookie政策</a></li>
                 </ul>
