--- a/src/index.html
+++ b/src/index.html
@@ -122,6 +122,7 @@
                         <a href="https://member.bilibili.com/platform/upload/sticker" target="_blank">贴纸投稿</a>
                         <a href="https://member.bilibili.com/platform/upload/video/frame" target="_blank">视频投稿</a>
                         <a href="https://member.bilibili.com/platform/upload-manager/article" target="_blank">投稿管理</a>
+                    </div>
                 </li>
             </ul>
         </nav>
