--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,9 @@
             <input type="text" name="keyword" id="searchInput" placeholder="搜索视频..." required>
             <button type="submit">搜索</button>
         </form>
+        <div class="search-dropdown">
+            
+        </div>
         <nav class="nav-ul-right">
             <ul>
                 <li class="dropdown"><a href="">大会员</a></li>
