--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>仿 Pornhub 风格页面</title>
+    <title>Bili-Hub</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <script src="search.js" defer></script>
 </head>
