--- a/src/index.html
+++ b/src/index.html
@@ -130,9 +130,7 @@
             </ul>
         </nav>
         <div class="avatar-info">
-            <a href="https://space.bilibili.com/" target="_blank" class="avatar-dropdown-content">
-                <img class="avatar" src="/res/images/avatar.png" alt="用户头像">
-            </a>
+            <!-- 用户头像区域由script.js动态控制 -->
         </div>
 
     </header>
