--- a/src/index.html
+++ b/src/index.html
@@ -129,8 +129,11 @@
                 </li>
             </ul>
         </nav>
-        <div class="avatar-info">
+        <div class="avatar-info dropdown">
             <!-- 用户头像区域由script.js动态控制 -->
+            <div id="avatar-dropdown" class="avatar-dropdown">
+                <!-- 动态内容将由script.js填充 -->
+            </div>
         </div>
 
     </header>
