--- a/src/login.html
+++ b/src/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bili-Hub 用户登录</title>
+    <title>Login Bili-Hub</title>
     <link rel="stylesheet" href="./login.css">
 </head>
 
