--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                 </button>
             </a>
             <div class="ph-logo">
-                <span class="ph-logo-porn">Bili</span><span class="ph-logo-hub">Bili</span>
+                <span class="ph-logo-porn">Bili</span><span class="ph-logo-hub">Hub</span>
             </div>
         </div>
         
