--- a/src/index.html
+++ b/src/index.html
@@ -270,46 +270,39 @@
         <!-- 页脚内容区域 - 分为四列显示不同类别的链接 -->
         <div class="footer-content">
             <div class="footer-column">
-                <h4>信息</h4>
+                <h4>bilibili</h4>
                 <ul>
-                    <li><a href="#">网站地图</a></li>
-                    <li><a href="#">条款和条件</a></li>
-                    <li><a href="#">隐私声明</a></li>
-                    <li><a href="#">DMCA</a></li>
-                    <li><a href="#">2257</a></li>
-                    <li><a href="#">推荐系统指南</a></li>
-                    <li><a href="#">Cookie政策</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">加入我们</a></li>
+                    <li><a href="#">bilibili认证</a></li>
+                    <li><a href="#">隐私政策</a></li>
                 </ul>
             </div>
             <div class="footer-column">
-                <h4>加入我们</h4>
+                <h4>bilibili创作</h4>
                 <ul>
-                    <li><a href="#">内容合作伙伴</a></li>
-                    <li><a href="#">广告服务</a></li>
-                    <li><a href="#">网站管理员</a></li>
-                    <li><a href="#">UP主计划</a></li>
-                    <li><a href="#">媒体中心</a></li>
+                    <li><a href="#">专栏投稿</a></li>
+                    <li><a href="#">音频投稿</a></li>
+                    <li><a href="#">视频投稿</a></li>
+                    <li><a href="#">创作激励</a></li>
                 </ul>
             </div>
             <div class="footer-column">
-                <h4>支持与帮助</h4>
+                <h4>帮助中心</h4>
                 <ul>
-                    <li><a href="#">内容移除</a></li>
-                    <li><a href="#">联系客服</a></li>
                     <li><a href="#">常见问题</a></li>
-                    <li><a href="#">信任与安全</a></li>
-                    <li><a href="#">家长控制</a></li>
+                    <li><a href="#">侵权申诉</a></li>
+                    <li><a href="#">会员服务</a></li>
+                    <li><a href="#">客服中心</a></li>
                 </ul>
             </div>
             <div class="footer-column">
-                <h4>发现</h4>
+                <h4>更多</h4>
                 <ul class="social-links">
-                    <li><a href="#">Bili-Hub博客</a></li>
-                    <li><a href="#">数据洞察</a></li>
-                    <li><a href="#">个人中心</a></li>
-                    <li><a href="#">移动端</a></li>
-                    <li><a href="#">视障辅助</a></li>
-                    <li><a href="#">听障辅助</a></li>
+                    <li><a href="#">活动中心</a></li>
+                    <li><a href="#">课堂</a></li>
+                    <li><a href="#">专题中心</a></li>
+                    <li><a href="#">用户反馈</a></li>
                 </ul>
             </div>
         </div>
