--- a/src/index.html
+++ b/src/index.html
@@ -272,37 +272,37 @@
             <div class="footer-column">
                 <h4>bilibili</h4>
                 <ul>
-                    <li><a href="#">关于我们</a></li>
-                    <li><a href="#">加入我们</a></li>
-                    <li><a href="#">bilibili认证</a></li>
-                    <li><a href="#">隐私政策</a></li>
+                    <li><a href="">关于我们</a></li>
+                    <li><a href="">加入我们</a></li>
+                    <li><a href="">bilibili认证</a></li>
+                    <li><a href="">隐私政策</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h4>bilibili创作</h4>
                 <ul>
-                    <li><a href="#">专栏投稿</a></li>
-                    <li><a href="#">音频投稿</a></li>
-                    <li><a href="#">视频投稿</a></li>
-                    <li><a href="#">创作激励</a></li>
+                    <li><a href="">专栏投稿</a></li>
+                    <li><a href="">音频投稿</a></li>
+                    <li><a href="">视频投稿</a></li>
+                    <li><a href="">创作激励</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h4>帮助中心</h4>
                 <ul>
-                    <li><a href="#">常见问题</a></li>
-                    <li><a href="#">侵权申诉</a></li>
-                    <li><a href="#">会员服务</a></li>
-                    <li><a href="#">客服中心</a></li>
+                    <li><a href="">常见问题</a></li>
+                    <li><a href="">侵权申诉</a></li>
+                    <li><a href="">会员服务</a></li>
+                    <li><a href="">客服中心</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h4>更多</h4>
                 <ul class="social-links">
-                    <li><a href="#">活动中心</a></li>
-                    <li><a href="#">课堂</a></li>
-                    <li><a href="#">专题中心</a></li>
-                    <li><a href="#">用户反馈</a></li>
+                    <li><a href="">活动中心</a></li>
+                    <li><a href="">课堂</a></li>
+                    <li><a href="">专题中心</a></li>
+                    <li><a href="">用户反馈</a></li>
                 </ul>
             </div>
         </div>
