--- a/src/message.html
+++ b/src/message.html
@@ -59,13 +59,13 @@
             <ul>
                 <li class="dropdown"><a href="">大会员</a></li>
                 <li class="dropdown">
-                    <a href="message.html">消息</a>
+                    <a href="./message.html">消息</a>
                     <div class="dropdown-content">
-                        <a href="">回复我的</a>
-                        <a href="">@我的</a>
-                        <a href="">收到的赞</a>
-                        <a href="">系统消息</a>
-                        <a href="message.html">我的私信</a>
+                        <a href="./message.html">回复我的</a>
+                        <a href="./message.html">@我的</a>
+                        <a href="./message.html">收到的赞</a>
+                        <a href="./message.html">系统消息</a>
+                        <a href="./message.html">我的私信</a>
                 </li>
                 <li class="dropdown"><a href="">动态</a></li>
                 <li class="dropdown"><a href="">收藏</a></li>
