--- a/src/userpage.html
+++ b/src/userpage.html
@@ -116,13 +116,13 @@
             <ul>
                 <li class="dropdown"><a href="">大会员</a></li>
                 <li class="dropdown">
-                    <a href="" target="_blank">消息</a>
+                    <a href="./message.html" target="_blank">消息</a>
                     <div class="dropdown-content">
-                        <a href="" target="_blank">回复我的</a>
-                        <a href="" target="_blank">@我的</a>
-                        <a href="" target="_blank">收到的赞</a>
-                        <a href="" target="_blank">系统消息</a>
-                        <a href="" target="_blank">我的消息</a>
+                        <a href="./message.html" target="_blank">回复我的</a>
+                        <a href="./message.html" target="_blank">@我的</a>
+                        <a href="./message.html" target="_blank">收到的赞</a>
+                        <a href="./message.html" target="_blank">系统消息</a>
+                        <a href="./message.html" target="_blank">我的消息</a>
                 </li>
                 <li class="dropdown"><a href="" target="_blank">动态</a></li>
                 <li class="dropdown"><a href="">收藏</a></li>
