--- a/src/index.html
+++ b/src/index.html
@@ -114,13 +114,14 @@
             <ul>
                 <li class="dropdown"><a href="">大会员</a></li>
                 <li class="dropdown">
-                    <a href="https://message.bilibili.com/" target="_blank">消息</a>
+                    <a href="./message.html" target="_blank">消息</a>
                     <div class="dropdown-content">
-                        <a href="https://message.bilibili.com/#/reply" target="_blank">回复我的</a>
-                        <a href="https://message.bilibili.com/#/at" target="_blank">@我的</a>
-                        <a href="https://message.bilibili.com/#/love" target="_blank">收到的赞</a>
-                        <a href="https://message.bilibili.com/#/system" target="_blank">系统消息</a>
-                        <a href="https://message.bilibili.com/#/whisper/" target="_blank">我的消息</a>
+                        <a href="./message.html" target="_blank">回复我的</a>
+                        <a href="./message.html" target="_blank">@我的</a>
+                        <a href="./message.html" target="_blank">收到的赞</a>
+                        <a href="./message.html" target="_blank">系统消息</a>
+                        <a href="./message.html" target="_blank">我的消息</a>
+                    </div>
                 </li>
                 <li class="dropdown"><a href="https://t.bilibili.com/" target="_blank">动态</a></li>
                 <li class="dropdown"><a href="">收藏</a></li>
