--- a/src/message.html
+++ b/src/message.html
@@ -193,8 +193,8 @@
                             <span class="status-badge online"></span>
                         </div>
                         <div class="contact-info">
-                            <div class="contact-name">Gemini 2.5 Pro</div>
-                            <div class="contact-last-message">你好，我是Gemini 2.5 Pro，一个AI助手。有什么我可以帮助你的吗？</div>
+                            <div class="contact-name">Google Gemma3</div>
+                            <div class="contact-last-message">你好，我是Gemma3，一个AI助手。有什么我可以帮助你的吗？</div>
                         </div>
                         <div class="contact-meta">
                             <div class="contact-time">12:30</div>
@@ -241,7 +241,7 @@
                     <div class="chat-user-info">
                         <img src="../res/images/gemini.png" alt="用户头像" class="chat-user-avatar">
                         <div class="chat-user-details">
-                            <div class="chat-user-name">Gemini 2.5 Pro</div>
+                            <div class="chat-user-name">Google Gemma3</div>
                             <div class="chat-user-status">在线</div>
                         </div>
                     </div>
