--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
     <title>Mainpage - Bili-Hub</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <script src="search.js" defer></script>
+    <link href="./style.css" rel="stylesheet" type="text/css">
+    <link href="./message.css" rel="stylesheet" type="text/css">
+    <script src="./search.js" defer></script>
+    <script type="module" src="./message.js"></script>
 </head>
 
 <body>
@@ -30,7 +32,7 @@
         <nav class="nav-ul-left">
             <ul>
                 <li class="dropdown">
-                    <a href="/src/index.html">首页</a>
+                    <a href="./index.html">首页</a>
                     <div class="dropdown-content multi-column">
                         <!-- 首页下拉菜单 - 分为5列显示不同分类 -->
                         <div class="column">
@@ -152,7 +154,7 @@
     <!-- 左侧边栏 -->
     <aside class="sidebar" id="sidebar">
         <div class="sidebar-menu">
-            <a href="/src/index.html" class="sidebar-menu-item active">
+            <a href="./index.html" class="sidebar-menu-item active">
                 <span class="sidebar-menu-icon">🏠</span>
                 <span>首页</span>
             </a>
