--- a/src/login.html
+++ b/src/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Bili-Hub</title>
+    <title>登录 - Bili-Hub</title>
     <link rel="stylesheet" href="./login.css">
 </head>
 
@@ -19,6 +19,7 @@
         </div>
         <div class="login-box">
             <h2>用户登录</h2>
+            <div class="message-area"></div>
             <form id="loginForm">
                 <div class="form-group">
                     <label for="username">用户名:</label>
@@ -33,11 +34,11 @@
                 </div>
             </form>
             <div class="extra-links">
-                <p>还不是我们的会员? <a href="#">立即注册</a> | <a href="index.html">返回首页</a></p>
+                <p>还不是我们的会员? <a href="./register.html">立即注册</a> | <a href="./index.html">返回首页</a></p>
             </div>
         </div>
     </div>
-    <script src="./login.js"></script>
+    <script type="module" src="./login.js"></script>
 </body>
 
 </html>
