--- a/src/userpage.html
+++ b/src/userpage.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
     <title>Userpage - Bili-Hub</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="userpage.css" rel="stylesheet" type="text/css">
-    <script src="search.js" defer></script>
+    <link href="./style.css" rel="stylesheet" type="text/css">
+    <link href="./userpage.css" rel="stylesheet" type="text/css">
+    <script src="./search.js" defer></script>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
         <nav class="nav-ul-left">
             <ul>
                 <li class="dropdown">
-                    <a href="/src/index.html">首页</a>
+                    <a href="./index.html">首页</a>
 
                     <div class="dropdown-content multi-column">
                         <!-- 首页下拉菜单 - 分为5列显示不同分类 -->
@@ -153,7 +153,7 @@
     <!-- 左侧边栏 -->
     <aside class="sidebar" id="sidebar">
         <div class="sidebar-menu">
-            <a href="/src/index.html" class="sidebar-menu-item">
+            <a href="./index.html" class="sidebar-menu-item">
                 <span class="sidebar-menu-icon">🏠</span>
                 <span>首页</span>
             </a>
@@ -241,7 +241,7 @@
         <div class="user-profile-header">
             <div class="user-cover-image">
                 <!-- 用户背景图 -->
-                <img src="../res/images/user-cover.png" alt="用户封面图">
+                <img src="../res/images/userbackground.jpg" alt="用户封面图">
             </div>
 
             <div class="user-profile-card">
