--- a/src/message.html
+++ b/src/message.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
     <title>私信 - Bili-Hub</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="message.css" rel="stylesheet" type="text/css">
-    <script src="search.js" defer></script>
+    <link href="./style.css" rel="stylesheet" type="text/css">
+    <link href="./message.css" rel="stylesheet" type="text/css">
+    <script src="./search.js" defer></script>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
         <nav class="nav-ul-left">
             <ul>
                 <li class="dropdown">
-                    <a href="/src/index.html">首页</a>
+                    <a href="./index.html">首页</a>
                     <div class="dropdown-content multi-column">
                         <!-- 首页下拉菜单 - 分为5列显示不同分类 -->
                         <div class="column">
@@ -143,7 +143,7 @@
     <!-- 左侧边栏 -->
     <aside class="sidebar" id="sidebar">
         <div class="sidebar-menu">
-            <a href="/src/index.html" class="sidebar-menu-item">
+            <a href="./index.html" class="sidebar-menu-item">
                 <span class="sidebar-menu-icon">🏠</span>
                 <span>首页</span>
             </a>
@@ -254,7 +254,6 @@
                         </div>
                         <div class="contact-meta">
                             <div class="contact-time">12:30</div>
-                            <div class="unread-badge">2</div>
                         </div>
                     </div>
 
@@ -283,6 +282,7 @@
                         </div>
                         <div class="contact-meta">
                             <div class="contact-time">周一</div>
+                            <div class="unread-badge">2</div>
                         </div>
                     </div>
 
